<resources>
    <string name="app_name">Jurusan</string>
    <string name="title_home">Home</string>
    <string name="title_academic">Akademik</string>
    <string name="title_association">Himpunan</string>
    <string name="title_mail">Persuratan</string>
    <string name="title_profile">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hai_user">Hai, Desi Musfiroh</string>
    <string name="title_notification">Notification</string>
    <string name="title_news">Berita</string>
    <string name="view_news">Lihat Semua</string>
    <string name="title_announcement">Pengumuman</string>
    <string name="view_announcement">Lihat Semua</string>
    <string name="snippet_announcement">Cuplikan Pengumuman</string>
    <string name="app_name_long">Sistem \nLayanan \nJurusan</string>
    <string name="jurusan">Teknik Elektro dan Informatika</string>
    <string name="welcome">Selamat Datang !</string>
    <string name="desc_login">Silahkan masukkan Username dan Password akun Siakad anda untuk login !</string>
    <string name="login">Login</string>
    <string name="fakultas">Fakultas Sains dan Teknologi</string>
    <string name="universitas">Universitas Jambi</string>
    <string name="year">2022</string>
    <string name="user">User</string>
    <string name="date">Tanggal</string>
    <string name="category">Kategori</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In ante metus dictum at tempor commodo ullamcorper a. Lacus luctus accumsan tortor posuere ac. Pharetra diam sit amet nisl suscipit. Volutpat lacus laoreet non curabitur. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit. Feugiat nibh sed pulvinar proin gravida. Neque laoreet suspendisse interdum consectetur libero. Egestas sed sed risus pretium quam vulputate dignissim suspendisse. Purus viverra accumsan in nisl nisi scelerisque eu. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Commodo quis imperdiet massa tincidunt. Sed vulputate mi sit amet mauris commodo quis. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae congue. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper. Sed ullamcorper morbi tincidunt ornare massa eget. Magna fermentum iaculis eu non diam phasellus vestibulum. Aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc.
        Massa id neque aliquam vestibulum. Egestas pretium aenean pharetra magna ac placerat. Tempor id eu nisl nunc mi. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero id. Rhoncus est pellentesque elit ullamcorper. Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget. Aliquet porttitor lacus luctus accumsan. Ornare arcu odio ut sem nulla pharetra diam sit amet. Consequat mauris nunc congue nisi vitae. Lacus sed viverra tellus in hac habitasse platea dictumst vestibulum. Posuere morbi leo urna molestie at elementum eu facilisis. Posuere morbi leo urna molestie at. Id donec ultrices tincidunt arcu non. Elementum pulvinar etiam non quam lacus. Etiam sit amet nisl purus in. Mi proin sed libero enim sed faucibus turpis in eu. Quisque egestas diam in arcu cursus. Aliquam purus sit amet luctus venenatis lectus magna. Volutpat ac tincidunt vitae semper quis lectus nulla at. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor.
        Suspendisse sed nisi lacus sed viverra tellus in hac. Metus aliquam eleifend mi in nulla posuere. Arcu non odio euismod lacinia. Senectus et netus et malesuada fames ac turpis egestas. Et tortor consequat id porta nibh venenatis cras. Eu ultrices vitae auctor eu augue. Laoreet suspendisse interdum consectetur libero id. Nunc faucibus a pellentesque sit amet. Tincidunt eget nullam non nisi est sit amet facilisis. Nisi est sit amet facilisis magna etiam tempor orci eu. Aliquam ut porttitor leo a. Justo nec ultrices dui sapien eget mi proin. Pellentesque habitant morbi tristique senectus et netus et. Facilisis volutpat est velit egestas dui id ornare. Lorem dolor sed viverra ipsum nunc. In hac habitasse platea dictumst quisque sagittis.
    </string>
    <string name="lorem_short">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In ante metus dictum at tempor commodo ullamcorper a. Lacus luctus accumsan tortor posuere ac. Pharetra diam sit amet nisl suscipit. Volutpat lacus laoreet non curabitur. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit. Feugiat nibh sed pulvinar proin gravida. Neque laoreet suspendisse interdum consectetur libero. Egestas sed sed risus pretium quam vulputate dignissim suspendisse. Purus viverra accumsan in nisl nisi scelerisque eu. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Commodo quis imperdiet massa tincidunt. Sed vulputate mi sit amet mauris commodo quis. Nulla facilisi nullam vehicula ipsum a arcu cursus vitae congue. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper. Sed ullamcorper morbi tincidunt ornare massa eget. Magna fermentum iaculis eu non diam phasellus vestibulum. Aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc.
    </string>
    <string name="student_name">Nama Mahasiswa</string>
    <string name="major_name">Nama Jurusan</string>
    <string name="generation">2018</string>
    <string name="published_date">Published Date</string>
    <string name="load_error">Gagal memuat data</string>
    <string name="retry">Refresh</string>
    <string name="berita_lainnya">Berita Lainnya</string>
    <string name="title_document">Document</string>
    <string name="other_menu">Menu Lainnya</string>
    <string name="title_jurusan">Jurusan</string>
    <string name="title_data_mahasiswa">Mahasiswa</string>
    <string name="title_data_dosen">Dosen</string>
    <string name="name_jurusan">Jurusan Teknik Elektro dan Informatika</string>
    <string name="name_fakultas">Fakultas Sains dan Teknologi</string>
    <string name="name_universitas">Universitas Jambi</string>
    <string name="prodi_teknik_elektro">Program Studi \nTeknik Elektro</string>
    <string name="prodi_sistem_informasi">Program Studi \nSistem Informasi</string>
    <string name="profil_jurusan">Profil Jurusan</string>
    <string name="profil_prodi">Profil Prodi</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">News</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="prodi">Program Studi</string>
    <string name="visi">Visi</string>
    <string name="misi">Misi</string>
    <string name="indikator_kinerja_utama">Indikator Kinerja Utama</string>
    <string name="iku_desc">Indikator kinerja utama atau IKU adalah ukuran atau indikator kinerja suatu instansi, utamanya dalam mencapai tujuan dan sasaran tertentu. Terdapat poin IKU pada Perguruan Tinggi</string>
    <string name="iku1">IKU 1</string>
    <string name="desc_iku1">Lulusan berhasil mendapatkan pekerjaan, melanjutkan studi, atau menjadi wiraswasta</string>
    <string name="iku2">IKU 2</string>
    <string name="desc_iku2">Mahasiswa mendapat pengalaman di luar kampus atau berprestasi nasional / internasional</string>
    <string name="pengurusan_surat">Pengurusan Surat</string>
    <string name="title_activity_prodi">ProdiActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="civitas_akademik">Data Civitas Akademik</string>
    <string name="content_tab_mahasiswa">Mahasiswa</string>
    <string name="content_tab_dosen">Dosen</string>
    <string name="content_tab_alumni">Alumni</string>
    <string name="cari">Cari ...</string>
    <string name="title_civitas">Civitas</string>
    <string name="title_iku">IKU</string>
    <string name="filter_data_mahasiswa">Filter Data Mahasiswa</string>
    <string name="iku3">IKU 3</string>
    <string name="desc_iku3">Dosen berkegiatan tridharma di kampus lain, bekerja sebagai praktisi, atau memiliki prestasi membimbing mahasiswa</string>
    <string name="iku4">IKU 4</string>
    <string name="desc_iku4">Dosen berkualifikasi 53, memiliki sertifikat kompetensi/ profesi, atau berpengalaman kerja sebagai praktisi</string>
    <string name="iku5">IKU 5</string>
    <string name="desc_iku5">Hasil kerja dosen atau keluaran penelitian yang mendapat rekognisi internasional atau digunakan oleh industri/ masyarakat/ pemerintah.</string>
    <string name="iku6">IKU 6</string>
    <string name="desc_iku6">Program Studi melaksanakan kerjasama dengan mitra</string>
    <string name="iku7">IKU 7</string>
    <string name="desc_iku7">Mata kuliah menerapkan project-based learning atau case method</string>
    <string name="iku8">IKU 8</string>
    <string name="desc_iku8">Program Studi memiliki akreditasi berstandar internasional</string>
    <string name="name">Nama</string>
    <string name="riwayat_pengajuan_surat">Riwayat Pengajuan Surat</string>
    <string name="pembuatan_surat">Pembuatan Surat</string>
    <string name="no">No</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="desc_notification">Deskripsi Notifikasi</string>
    <string name="ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="title_info">Info</string>
    <string name="sistem_layanan_jurusan">Sistem\nLayanan\nJurusan</string>
    <string name="jenis_surat">Jenis Surat</string>
    <string name="deskripsi_surat">Deskripsi Surat</string>
    <string name="tanggal_ijasah">Tanggal Ijasah</string>
    <string name="dots"> : </string>
    <string name="nomor_ijasah">Nomor Ijasah</string>
    <string name="mendapat_pekerjaan">Mendapat Pekerjaan</string>
    <string name="bukti">Bukti</string>
    <string name="masa_tunggu">Masa Tunggu</string>
    <string name="kota_tempat_kerja">Kab/Kota Tempat Kerja</string>
    <string name="umk_kota">UMK Kab/Kota</string>
    <string name="penghasilan">Penghasilan</string>
    <string name="kriteria_perusahaan">Kriteria Perusahaan</string>
    <string name="jenis_kegiatan">Jenis Kegiatan</string>
    <string name="sk_rektor">SK Rektor</string>
    <string name="no_induk">Nomor Induk</string>
    <string name="mitra">Mitra</string>
    <string name="no_pks">No PKS</string>
    <string name="nama_kegiatan">Nama Kegiatan</string>
    <string name="tipe_mitra">Tipe Mitra</string>
    <string name="mata_kuliah">Mata Kuliah</string>
    <string name="metode_pembelajaran">Metode Pembelajaran</string>
    <string name="nidn_nidk">NIDN/NIDK</string>
    <string name="judul_penelitian">Judul Penelitian</string>
    <string name="nama_dosen">Nama Dosen</string>
    <string name="tipe_kegiatan">Tipe Kegiatan</string>
    <string name="luaran_hasil">Luaran Hasil</string>
    <string name="link_url">Link URL</string>
    <string name="penerapan_di_masyarakat">Penerapan di Masyarakat</string>
    <string name="kolaborator">Kolaborator</string>
    <string name="karya_terapan">Karya Terapan</string>
    <string name="karya_seni">Karya Seni</string>
    <string name="angkatan">Angkatan</string>
    <string name="status">Status</string>
    <string name="sistem_informasi">Sistem Informasi</string>
    <string name="teknik_elekto">Teknik Elektro</string>
    <string name="semua">Semua</string>
    <string name="status_mahasiswa">Status Mahasiswa</string>
    <string name="mahasiswa_aktif">Mahasiswa Aktif</string>
    <string name="cuti_akademik">Cuti Akademik</string>
    <string name="pilih_angkatan">Pilih Angkatan</string>
    <string name="terapkan">Terapkan</string>
    <string name="filter_data_dosen">Filter Data Dosen</string>
</resources>