<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:cnb_iconColor="@color/primary"/>
    <item
        android:id="@+id/navigation_civitas"
        android:icon="@drawable/ic_academic"
        android:title="@string/title_civitas"
        app:cnb_iconColor="@color/primary"/>
    <item
        android:id="@+id/navigation_iku"
        android:icon="@drawable/ic_iku"
        android:title="@string/title_iku"
        app:cnb_iconColor="@color/primary"/>
    <item
        android:id="@+id/navigation_mail"
        android:icon="@drawable/ic_mail"
        android:title="@string/title_mail"
        app:cnb_iconColor="@color/primary"/>
</menu>