<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_bottom">

    <FrameLayout
        android:layout_width="50dp"
        android:layout_height="3dp"
        android:background="@color/grey"
        android:layout_gravity="center"/>

    <TextView
        style="@style/Text.Medium"
        android:text="@string/filter_data_dosen"
        android:layout_marginVertical="16dp"
        android:layout_gravity="center"/>

    <TextView
        style="@style/Text.Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prodi"/>

    <RadioGroup
        android:id="@+id/radio_group_prodi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/prodi_semua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semua"/>
        <RadioButton
            android:id="@+id/prodi_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sistem_informasi"
            android:layout_marginEnd="8dp"
            />
        <RadioButton
            android:id="@+id/prodi_te"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teknik_elekto"
            android:layout_marginEnd="8dp"/>
    </RadioGroup>

    <TextView
        style="@style/Text.Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/status"/>



    <Spinner
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/spinner_status"
        style="@style/Widget.AppCompat.Spinner"/>

    <Button
        android:id="@+id/btn_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terapkan"
        android:layout_gravity="end"
        android:layout_marginVertical="20dp"/>
</LinearLayout>


