<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/tv_prodi"
            style="@style/Text.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prodi"/>
        <TextView
            android:id="@+id/tv_mata_kuliah"
            style="@style/Text.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mata_kuliah"/>
        <TextView
            android:id="@+id/tv_metode_pembelajaran"
            style="@style/Text.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metode_pembelajaran"/>
        <TextView
            android:id="@+id/tv_sk_rektor"
            style="@style/Text.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sk_rektor"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>