<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        style="@style/Text.Large"
        android:text="@string/pengurusan_surat"
        android:textColor="@color/black"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/title_history"
        style="@style/Text.Medium"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/riwayat_pengajuan_surat" />

    <TextView
        android:id="@+id/title_create"
        style="@style/Text.Medium"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/pembuatan_surat" />
</LinearLayout>