<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/tv_judul"
            style="@style/Text.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_penelitian"/>
        <TextView
            android:id="@+id/tv_nama"
            style="@style/Text.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"/>
        <TextView
            android:id="@+id/tv_no_induk"
            style="@style/Text.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_induk"/>
        <TextView
            android:id="@+id/tv_tipe_kegiatan"
            style="@style/Text.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_luaran_hasil"
            style="@style/Text.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>